--- a/languages/en.lang
+++ b/languages/en.lang
@@ -93,13 +93,13 @@ handlerEvents.userBanned=You have been banned from using the bot\n» Reason: %1\
 handlerEvents.threadBanned=This group has been banned from using the bot\n» Reason: %1\n» Time: %2\n» Thread ID: %3
 handlerEvents.onlyAdminBox=This group is currently enabled only group administrators can use the bot
 handlerEvents.onlyAdminBot=❌ | Currently only bot's admin can use bot
-handlerEvents.commandNotFound=Command "%1" does not exist, type %2help to see all available commands
-handlerEvents.commandNotFound2=The command you are using does not exist, type %1help to see all available commands
+handlerEvents.commandNotFound=𝒍𝒂 𝒄𝒐𝒎𝒎𝒂𝒏𝒅𝒆"%1" 𝒏'𝒆𝒙𝒊𝒔𝒕𝒆 𝒑𝒂𝒔 𝒆𝒏𝒄𝒐𝒓𝒆 𝒔𝒊𝒎𝒑𝒍𝒆 𝒎𝒐𝒓𝒕𝒆𝒍, 𝒖𝒕𝒊𝒍𝒊𝒔𝒆𝒔 %2help 𝒑𝒐𝒖𝒓 𝒗𝒐𝒊𝒓 𝒍𝒂 𝒍𝒊𝒔𝒕𝒆 𝒅𝒆𝒔 𝒄𝒐𝒎𝒎𝒂𝒏𝒅𝒆𝒔 𝒇𝒐𝒏𝒄𝒕𝒊𝒐𝒏𝒏𝒆𝒍𝒔
+handlerEvents.commandNotFound2=╭──────────\n|🍁𝐣𝐨𝐧𝐡𝐬 𝐚𝐜𝐤𝐞𝐫𝐦𝐚𝐧🍁\n╰────────── \n https://www.facebook.com/jonnhy.dieumerci.7
 handlerEvents.commandSyntaxError=The command you are using is wrong syntax, please type %1help %2 to see the details of how to use this command
 handlerEvents.onlyAdmin=❌ | Only group administrators can use the command "%1"
 handlerEvents.onlyAdminToUseOnReply=❌ | Only group administrators can use the reply function of the command "%1"
 handlerEvents.onlyAdminToUseOnReaction=❌ | Only group administrators can use the reaction function of the command "%1"
-handlerEvents.onlyAdminBot2=❌ | Only bot's admin can use the command "%1"
+handlerEvents.onlyAdminBot2=❌ | 𝐬𝐞𝐮𝐥 𝗥𝗨𝗗𝗘𝗨𝗦 𝗔𝗖𝗞𝗘𝗥𝗠𝗔𝗡 𝐮𝐭𝐢𝐥𝐢𝐬𝐞𝐬 𝐜𝐞𝐭𝐭𝐞 𝐜𝐨𝐦𝐦𝐚𝐧𝐧𝐝𝐞💁‍♂️"%1 \n 𝒎𝒆𝒓𝒄𝒊 𝒅𝒆 𝒏𝒆 𝒑𝒍𝒖𝒔 𝒋𝒂𝒎𝒂𝒊𝒔 𝒍'𝒆𝒔𝒔𝒂𝒚𝒆𝒓 "
 handlerEvents.onlyAdminBot2ToUseOnReply=❌ | Only bot's admin can use the reply function of the command "%1"
 handlerEvents.onlyAdminBot2ToUseOnReaction=❌ | Only bot's admin can use the reaction function of the command "%1"
 handlerEvents.waitingForCommand=⏱ You are in the waiting time to use this command, please come back after %1s
